deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: globex
  name: globex
spec:
  selector:
    matchLabels:
      app: globex
  template:
    metadata:
      labels:
        app: globex
    spec:
      containers:
        - name: globex
          image: lrochette/globex:7d53d579010c7d6c7524f38f023861c2cb55d17e
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
