service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: globex
  name: globex
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: globex
  type: LoadBalancer
