ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: globex
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /globex
            backend:
              service:
                name: globex
                port:
                  number: 80
            pathType: ImplementationSpecific
